--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -42,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "tailwindcss": "^3.2.6"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
